# polyglot-agent

./: .gitignore  README.md  pyproject.toml
src/polyglot_map/: __init__.py  __main__.py  cli.py  system_prompt.md
tests/: test_layout_mapping.py
