[project]
name = "polyglot-agent"
version = "0.1.0"
description = "Codex-backed TypeScript-to-polyglot drift repair harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
polyglot-map = "polyglot_map.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
