[project]
name = "polyglot-agent"
version = "0.1.0"
description = "Codex-backed TypeScript-to-polyglot drift repair harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
polyglot-map = "polyglot_map.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_map"]

[tool.hatch.build.targets.wheel.force-include]
"src/polyglot_map/system_prompt.md" = "polyglot_map/system_prompt.md"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/bin",
    "/src",
    "/tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
